{
    "name": "GameplayInput",
    "maps": [
        {
            "name": "Player",
            "id": "73ccf84d-f0d4-4e62-ac33-e1b074bee771",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "93bce31d-d2c3-4dae-887b-f939421e385a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "6efcc915-a730-47f1-8b6a-98c08ce4bb1c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "65afe57f-b93f-4890-94bc-d68e466f4ec4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ead67beb-9f6d-4eaf-957f-218026cdfb6a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9232a371-db07-4999-a463-9f8c9fe5fe18",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a27ee7a4-2d4a-4b23-b16d-7b88ba924485",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "CharacterSelection",
            "id": "0d5e47f0-56d0-4c9b-b9af-18b02f042062",
            "actions": [
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "b7cbc5e0-728d-437e-8d06-5c0544746cc5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "84c809f4-cad6-4455-bca8-8ecda53042e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "acc2dda8-a09a-4226-a2b4-08217f4246c8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7fffba5-e583-4952-a09f-7be2b9decba4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameMode",
            "id": "864ba238-9c23-4303-a65a-6f7cd680261a",
            "actions": [
                {
                    "name": "CharacterSelection",
                    "type": "Button",
                    "id": "c110d86b-95bc-4e0e-b046-93c2ec10cdb1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Gameplay",
                    "type": "Button",
                    "id": "50bd7966-51f0-4fa4-a005-6612e1660eea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "810cf685-b15e-4d76-b7fe-a1f2347c7f7d",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "CharacterSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1da0b67e-58cb-4342-bf43-c1c4256b7b94",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Gameplay",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}